Refactored GProcess into GProcessTask, using GTaskRunner. Added missing javadocs.