@@ -1,7 +1,10 @@
-// Copyright 2022 GlitchyByte
+// Copyright 2022-2023 GlitchyByte
 // SPDX-License-Identifier: Apache-2.0
 
 package com.glitchybyte.glib.process;
+
+import com.glitchybyte.glib.concurrent.GLock;
+import com.glitchybyte.glib.concurrent.GTask;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -9,15 +12,21 @@ import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 
 /**
  * Console output collector for capturing an external process output.
+ *
+ * <p>This class uses a buffer to accumulate lines, when lines are requested
+ * the whole buffer is returned and a new buffer created for new lines.
  */
-public final class GProcessOutputCollector implements Runnable {
+public final class GProcessOutputCollectorTask extends GTask {
 
     private final Process process;
     private final int maxOutputBufferLines;
-    private List<String> outputLines;
+    private LinkedList<String> outputLines;
+    private final Lock outputLinesLock = new ReentrantLock();
 
     /**
      * Creates an output collector.
@@ -26,13 +35,13 @@ public final class GProcessOutputCollector implements Runnable {
      * @param maxOutputBufferLines Max lines to hold in memory. If output exceeds this quantity before being queried,
      *                             older lines will be lost. A value of zero will prevent any collection.
      */
-    public GProcessOutputCollector(final Process process, final int maxOutputBufferLines) {
+    public GProcessOutputCollectorTask(final Process process, final int maxOutputBufferLines) {
         this.process = process;
         this.maxOutputBufferLines = maxOutputBufferLines;
         outputLines = maxOutputBufferLines == 0 ? null : createOutputBuffer();
     }
 
-    private List<String> createOutputBuffer() {
+    private LinkedList<String> createOutputBuffer() {
         return new LinkedList<>();
     }
 
@@ -42,13 +51,14 @@ public final class GProcessOutputCollector implements Runnable {
     @Override
     public void run() {
         try (final BufferedReader reader = process.inputReader(StandardCharsets.UTF_8)) {
+            started();
             String line;
             do {
                 line = reader.readLine();
                 if (line != null) {
                     addLineToOutput(line);
                 }
-            } while (line != null);
+            } while ((line != null) && !Thread.currentThread().isInterrupted());
         } catch (final IOException e) {
             // No-op.
         }
@@ -58,25 +68,27 @@ public final class GProcessOutputCollector implements Runnable {
         if (maxOutputBufferLines == 0) {
             return;
         }
-        synchronized (this) {
+        GLock.locked(outputLinesLock, () -> {
             while (outputLines.size() >= maxOutputBufferLines) {
-                outputLines.remove(0);
+                outputLines.removeFirst();
             }
             outputLines.add(line);
-        }
+        });
     }
 
     /**
-     * Returns all collected output until this moment. Resets collection buffer.
+     * Returns all collected output until this moment. Recreate collection buffer.
      *
      * @return All collected lines until this moment.
      */
-    public synchronized List<String> getOutput() {
+    public List<String> getOutput() {
         if (maxOutputBufferLines == 0) {
             return Collections.emptyList();
         }
-        final List<String> output = outputLines;
-        outputLines = createOutputBuffer();
-        return output;
+        return GLock.lockedResult(outputLinesLock, () -> {
+            final List<String> output = outputLines;
+            outputLines = createOutputBuffer();
+            return output;
+        });
     }
 }
